<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="44dp">

        <TextView
            android:id="@+id/enter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="-1sp"
            android:text="@string/enter"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginTop="72dp"
            android:src="@drawable/headphones"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="2dp"
            android:lineSpacingExtra="-1sp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/logo_image"
            app:layout_constraintStart_toEndOf="@+id/logo_image" />

        <EditText
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="37dp"
            android:background="@drawable/text_input_layout"
            android:drawablePadding="16dp"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/user_name"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/logo_image" />

        <EditText
            android:id="@+id/user_password_input"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/text_input_layout"
            android:drawablePadding="16dp"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/user_password"
            android:textColorHint="@color/black_200"
            android:inputType="textPassword"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/user_name_input" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_password_input" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:alpha="0.3"
            android:lineSpacingExtra="-1sp"
            android:text="@string/not_have_account"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSurface"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/signup"
            android:textColor="@color/light_blue_900"
            android:textColorLink="@color/light_blue_600"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:alpha="0.3"
            android:lineSpacingExtra="-1sp"
            android:text="@string/you_enter"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>