<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MainFragment">

    <EditText
        android:id="@+id/lobby_id"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/text_input_layout"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/lobby_id"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter_lobby"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:text="@string/enter_lobby"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_id" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_lobby"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:text="@string/create_lobby"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_lobby" />

</androidx.constraintlayout.widget.ConstraintLayout>